# lora-packet-rs

./: AGENTS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  deny.toml  rustfmt.toml
.github/workflows/: ci.yml  publish-crate.yml
docs/: AGENT_INTEGRATION.md  migration.md  ts-source-map.md
docs/superpowers/plans/: 2026-05-20-lora-packet-implementation.md
docs/superpowers/specs/: 2026-05-20-lora-packet-rs-design.md
src/: codec.rs  crypto.rs  error.rs  lib.rs  mic.rs  types.rs  util.rs
tests/: boundary.rs  builder_validation.rs  cross_version.rs  decrypt.rs  edge_parse.rs  fopts.rs  hex_base64.rs  join_accept_encrypt.rs  key_gen.rs  mic.rs  negative.rs  newtype_invariants.rs  no_std_smoke.rs  packet.rs  parse.rs  real_world_vectors.rs  round_trip_exhaustive.rs  serde.rs  thread_safety.rs  usage_scenarios.rs
